--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -1,13 +1,13 @@
 <% if @name %>
-  <h1> My name is <%= @name %> </h1>
+  <h1> My name is <%= @name %></h1>
 <% end %>
 
-<form action="/named-cat">
-  Name: <input type="text" name="name">
+<form action="/named-cat" method="post">
+    Name: <input type="text" name="name">
     <input type="submit" value="Submit">
 </form>
 
 
-<div style = 'border: 3px dashed red'>
-<img src='http://bit.ly/1eze8aE'>
+<div>
+<img src='http://bit.ly/1eze8aE' style = 'border: 3px dashed red'>
 </div>
